[package]
name = "koption_macros"
version = "0.1.1"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"
description = "Some macros that are useful for working with `Option`s."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/norcalli/koption_macros"
homepage = "https://github.com/norcalli/koption_macros"
repository = "https://github.com/norcalli/koption_macros"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
